--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -118,7 +118,7 @@
               </label>
             </div>
             <div id="biopsyDateContainer" class="tnth-hide indent form-group">
-            	<label for="biopsyDate">{{_("Biopsy Date: ")}}&nbsp;</label>
+            	<label for="biopsyDate">{{_("Biopsy Date: ")}}</label>
             	<input id="biopsyDate" type="text" class="form-control" placeholder="DD/MM/YYYY" maxlength="10">
             	<div id="biopsyDateError" class="error-message post-biopsy-error"></div>
             </div>
@@ -194,7 +194,8 @@
            if (!m) return false;
            if (m && m.length < 2) return false;
            var initArray = val.split("/");
-           if (initArray[2].length < 4) return false;
+           //make sure at least all date items are there
+           if (initArray[0].length == 0 || initArray[1].length == 0 || initArray[2].length < 4) return false;
            if (/((0)?[1-9]|1\d|2\d|3[01])\/((0)?[1-9]|1\d|2\d)\/(19|20)\d{2}/.test(val)) {
               var today = new Date();
               // Check to see if this is a real date
@@ -246,7 +247,6 @@
           $("#biopsyDate").on("blur", function() {
               return checkBiopsyDate($(this).val());
           });
-
           $("input[name='tx']").each(function() {
                $(this).on("click", function() {
                   if ($(this).val() == "true") {
