--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -432,9 +432,13 @@ $(document).ready(function(){
             var nextRadio = thisItem.closest(".pat-q").next(".pat-q");
             var nextItem = nextRadio.length > 0 ? nextRadio : thisItem.parents(".pat-q").next();
             if (nextItem.length > 0) {
-                $('html, body').animate({
-                  scrollTop: nextItem.offset().top
-                }, 1000);
+                var checkedRadio = nextItem.find("input[type='radio']:checked");
+                if (!(checkedRadio.length > 0) && !nextItem.isOnScreen()) {
+                  $('html, body').animate({
+                    scrollTop: nextItem.offset().top
+                  }, 1000);
+                };
+
                 nextItem.find("input[type='radio']").each(function() {
                   $(this).attr("skipped", "false");
                 });
