--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -127,8 +127,8 @@ a.btn {
 }
 .btn-tnth-back {
   color: #777;
-  padding: 0 5px 0 0;
-  margin: 1em 0;
+  padding: 0;
+  margin: 1em 0.2em;
 }
 .form-control {
   font-size: @baseFontSize;
@@ -300,7 +300,7 @@ h4.detail-title {
     background-color: #ececea;
   }
   TH {
-    background-image: linear-gradient(to bottom, #FFF, #efefef);
+    background-image: linear-gradient(to bottom, #FFF, #F1F1F1);
     letter-spacing: 0.1px;
   }
 }
@@ -524,7 +524,7 @@ h4.detail-title {
   div.or {
     display: inline-block;
     background-color: #888a8c;
-    margin: 1.5em 1em 1em;
+    margin: 1.3em 1em 1em 1.2em;
   }
 
   #_downloadLink {
@@ -540,7 +540,7 @@ h4.detail-title {
   }
 }
 #patientListOptions {
-  display:flex; 
+  display:flex;
   flex-direction: column;
 }
 #patientAssessmentDownload {
@@ -598,7 +598,7 @@ h4.detail-title {
     height: @smallerText * 2;
   }
   .btn {
-    font-size: @smallerText;
+    font-size: @smallText;
   }
 }
 .small-text {
@@ -613,7 +613,7 @@ h4.detail-title {
 
   }
   .search .form-control {
-    height: 34px;
+    height: 36px;
   }
 }
 // For table rowlinks
