add interventions list to patient profile

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1486,6 +1486,9 @@ div.org-container input[type="checkbox"] {
 div.timezone-warning.text-warning {
   flex: 1 100%;
 }
+.capitalize {
+  text-transform: capitalize;
+}
 /** Responsive sizes **/
 @media (max-width: 480px) {
   .side-xs-one {
