--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1630,6 +1630,9 @@ div.org-container {
 div.timezone-warning.text-warning {
   flex: 1 100%;
 }
+.capitalize {
+  text-transform: capitalize
+}
 
 /** Responsive sizes **/
 @media (max-width: 480px) {
