add show macro filter to interventions section in profile

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1386,15 +1386,22 @@
     });</script>
 {%- endmacro %}
 {% macro profileInterventions(user_interventions) -%}
-    {% if user_interventions %}
-        {% if user_interventions.length != 0 %}<p class="text-muted">Patient is participating in the following intervention(s): </p>{% endif %}
-        {% for intervention in user_interventions %}
-            <div class="capitalize">{{intervention.name | replace("_", " ")}}</div>
-        {% endfor %}
-        {% if user_interventions.length == 0 %}<div class="text-muted">None</div>{% endif %}
-    {% else %}
-        <div class="text-muted">None</div>
-    {% endif %}
+  <div class="row">
+        <div class="col-md-12 col-xs-12">
+            <div class="profile-item-container">
+                <h4 id="interventionsLoc" class="profile-item-title index-item">Interventions</h4>
+                    {% if user_interventions %}
+                        {% if user_interventions.length != 0 %}<p class="text-muted">Patient is participating in the following intervention(s): </p>{% endif %}
+                        {% for intervention in user_interventions %}
+                            <div class="capitalize">{{intervention.name | replace("_", " ")}}</div>
+                        {% endfor %}
+                        {% if user_interventions.length == 0 %}<div class="text-muted">None</div>{% endif %}
+                    {% else %}
+                        <div class="text-muted">None</div>
+                    {% endif %}
+                </div>
+            </div>
+    </div>
 {%- endmacro %}
 {% macro profile(person, current_user, consent_agreements, user_interventions) -%}
     <!-- remember to add xs class to side when custom content is present -->
@@ -1492,14 +1499,9 @@
         </div>
     {% endif %}
     {% if person and (person.has_role(ROLE.PATIENT)) and current_user and current_user.has_role(ROLE.INTERVENTION_STAFF) %}
-        <div class="row">
-            <div class="col-md-12 col-xs-12">
-                <div class="profile-item-container">
-                    <h4 id="interventionsLoc" class="profile-item-title index-item">Interventions</h4>
-                    {{profileInterventions(user_interventions)}}
-                </div>
-            </div>
-        </div>
+      
+        {{profileInterventions(user_interventions) | show_macro('interventions')}}
+                
     {% endif %}
     {% if (person and person.has_role(ROLE.PATIENT)) or (current_user.has_role(ROLE.STAFF) and current_user.id != person.id)%}
         <div class="row" id="profileSessionListMainContainer">
