files changes not added in last commit

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1305,6 +1305,9 @@ table.profile-audit-log TH,
 .radio-inline input[type=radio] {
 	margin-left: -18px;
 }
+#biopsyDateContainer {
+  display: none;
+}
 #biopsyDateContainer label {
   margin-right: 0.2em;
 }
