--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1429,6 +1429,9 @@ div.noOrg-container {
 .radio-inline input[type=radio] {
   margin-left: -18px;
 }
+#biopsyDateContainer {
+  display: none;
+}
 #biopsyDateContainer label {
   margin-right: 0.2em;
 }
