--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -425,7 +425,7 @@
        <div id="userOrgsInfo" class="text-muted">No clinic found in selected clinic.</div>
        {% if consent_agreements %}{{consent(person, consent_agreements, current_user)}}{% endif %}
     </div>
-    <script>
+    <script async>
         var CONSENT_WITH_TOP_LEVEL_ORG = {% if config.CONSENT_WITH_TOP_LEVEL_ORG %}true{% else %}false{% endif %};
         function handleCheckedItem() {
             var o = $("#userOrgs input[name='organization']:checked");
@@ -1066,7 +1066,7 @@
             </div>
         </div>
     </div>
-    <script>
+    <script async>
         function checkDiagnosis() {
             var diag = $("#pca_diag_yes");
 
